# unknowncheats-mcp

./: .env.example  .gitignore  Cargo.toml  LICENSE  README.md
.github/workflows/: ci.yml
docs/superpowers/specs/: 2026-06-24-github-preview-design.md
src/: cloudflare.rs  config.rs  forum_client.rs  lib.rs  main.rs  mcp.rs  parser.rs
tests/: capability_test.rs  config_test.rs  forum_client_test.rs  mcp_test.rs  parser_test.rs
tools/: uc-fetch.py
